fix video on mobile

--- a/src/app/content/content.component.scss
+++ b/src/app/content/content.component.scss
@@ -3,3 +3,7 @@ audio {
   margin-top: 0.5em;
   width: 50%;
 }
+
+video {
+  width: 100%;
+}
